--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello! this is the boiler plate website for USC syllabi. :) More to come.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>USC Syllabi</title>
+  <!--for Responsiveness-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!--CSS links-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <!--Scripts-->
+  <script type="text/javascript" src="inc/scripts/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+  yooo whats good
+</body>
