added bootstrap and trying to use it

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>USC Syllabi</title>
   <!--for Responsiveness-->
@@ -13,5 +13,8 @@
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-  yooo whats good
+  <div class="container-fluid">
+    <h1>Please enter your USC email below to gain access to USC syllabi!</h1>
+    <h3>This is for numerical data collection purposes (measuring specific traffic).</h3>
+  </div>
 </body>
