attempting another push

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="row">
     <div class="emailInputField col-centered col-md-4">
-    <form>
+    <form action="https://script.google.com/a/macros/usc.edu/s/AKfycbz3IjR4fg5okZstbAHZAweO-Bm6CbD9y0QK72yUFkDDhIrBFqg/exec" method="POST">
       <div class="form-group">
         <label class="sr-only" for="exampleInputEmail1">Email address</label>
         <input type="email" class="form-control" id="emailInputForTraffic" placeholder="Email">
